$Id: ChangeLog,v 1.107 2004/12/27 11:37:10 h_oudejans Exp $

2004-01-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now works with wxWidgets 2.5.3, however the main screen
	  appears to be too wide.
	* Catapult is now 100% unicode compatible.
	* Added possibility to drop files on diskA,diskB, etc, but that doesn't
	  work in wxmsw because of (yet another) bug in wxWidgets.
	* Added compile targets in vc++ to compile in 2.5.3 with or without
	  unicode. wx2.4 targets are also still available.
	  
2004-12-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed some non-game romtypes
	* Made the romtype dialog autosizing by contents
	* Added Cassette stuff by popup menu
	* Fixed some minor bugs and warnings

2004-12-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added popup menu's to the sessionpage.
	* Added romtype selection (romtypes are hardcoded for now)
	* Added IPS selection
	* Added Browse for directory (dirasdisk)
	* Added Empty disk

2004-12-13 Manuel Bilderbeek <manuel@msxnet.org>
	* Added proper enable/disable behaviour for Clear and Type buttons on
	  InputPage

2004-12-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed info2code.mk so config.h and version.ii are created with
	  wxT macro's
	* removed wxT macro where used in combination with XRCID since
	  this also includes the wxT macro.
	* added (char *) cast to all functions using wxString.c_str()
	* fixed a redefinition warning in vc++

2004-12-01 Herman Oudejans <hn.oudejans@quicknet.nl>
	* added wxT macro's for compilation with unicode

2004-11-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* catapult can be compiled in mingw without any alteration of 
	  wx-config. The result is still far bigger than using vc++, so it's 
	  not perfect yet.

2004-11-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed gcc compiler warning (signed/unsigned mismatch) in FOREACH 
	  code
	* First step for compiling using mingw:
		- Included <windows.h> where HANDLE is needed