@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sat Dec 11 12:12:01 2004 -->
+<!-- generated by wxGlade 0.3.4 on Sat Jan  8 13:05:59 2005 -->
 
 <application path="../../resources/dialogs/session.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="SessionPage" base="EditTopLevelPanel">
@@ -49,7 +49,7 @@
                         <object class="wxListBox" name="ExtensionList" base="EditListBox">
                             <style>wxLB_MULTIPLE</style>
                             <selection>0</selection>
-                            <tooltip>The extensions you want to use with the emulated MSX</tooltip>
+                            <tooltip>The extensios you want to use with the emulated MSX</tooltip>
                             <choices>
                                 <choice></choice>
                             </choices>
@@ -81,8 +81,9 @@
                                         <border>3</border>
                                         <option>0</option>
                                         <object class="wxButton" name="DiskA_Button" base="EditButton">
+                                            <tooltip>Disk A menu</tooltip>
                                             <label>Disk A</label>
-                                            <size>75, -1</size>
+                                            <size>80, -1</size>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
@@ -130,6 +131,7 @@
                                         <border>3</border>
                                         <option>0</option>
                                         <object class="wxButton" name="DiskB_Button" base="EditButton">
+                                            <tooltip>Disk B menu</tooltip>
                                             <label>Disk B</label>
                                         </object>
                                     </object>
@@ -187,6 +189,7 @@
                                         <border>3</border>
                                         <option>0</option>
                                         <object class="wxButton" name="CartA_Button" base="EditButton">
+                                            <tooltip>Cartridge A menu</tooltip>
                                             <label>Cart A</label>
                                         </object>
                                     </object>
@@ -235,6 +238,7 @@
                                         <border>3</border>
                                         <option>0</option>
                                         <object class="wxButton" name="CartB_Button" base="EditButton">
+                                            <tooltip>Cartridge B menu</tooltip>
                                             <label>Cart B</label>
                                         </object>
                                     </object>
@@ -292,8 +296,9 @@
                                         <border>3</border>
                                         <option>0</option>
                                         <object class="wxButton" name="CassetteButton" base="EditButton">
+                                            <tooltip>Cassette menu</tooltip>
                                             <label>Cassette</label>
-                                            <size>-1,-1</size>
+                                            <size>-1, -1</size>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
